<resources>
    <string name="app_name">FlickrFindr</string>
    <string name="flickr_item_image">Flickr Item Image</string>
    <string name="search_hint">Search by keyword</string>
    <string name="clear_search_history">Clear Search History</string>
    <string name="search_amount">Search Amount</string>
    <string name="_25">25</string>
    <string name="_50">50</string>
    <string name="_100">100</string>
    <string name="view_bookmarks">View Bookmarks</string>
    <string name="loading_image">Loading Image</string>
</resources>
