<?xml version="1.0" encoding="utf-8"?>
<menu
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/action_clear_history"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/clear_search_history"
        app:showAsAction="never">
    </item>

    <item android:id="@+id/view_bookmarks"
          android:icon="@android:drawable/ic_menu_view"
          android:title="@string/view_bookmarks"
          app:showAsAction="never">
    </item>

    <item
            android:id="@+id/search_amount"
            android:title="@string/search_amount"
            android:icon="@android:drawable/ic_menu_sort_by_size"
            app:showAsAction="never">
        <menu>
            <item
                    android:id="@+id/menuSortDefault"
                    android:title="@string/_25" />
            <item
                    android:id="@+id/menuSort50"
                    android:title="@string/_50" />
            <item
                    android:id="@+id/menuSort100"
                    android:title="@string/_100" />
        </menu>
    </item>
</menu>